--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
   "devDependencies": {
     "gulp-autoprefixer": "^4.0.0",
     "gulp-clean-css": "^3.4.2",
+    "gulp-concat": "^2.6.1",
     "gulp-pug": "^3.3.0",
-    "gulp-sass": "^3.1.0"
+    "gulp-sass": "^3.1.0",
+    "gulp-uglify": "^3.0.0"
   }
 }
